# cegui-qtclipboardprovider

./: .hgignore  CMakeLists.txt
include/: CEGUIQtClipboardProvider.h
src/: CEGUIQtClipboardProvider.cpp
